# caerwyn

./: .clang-tidy  CMakeLists.txt  README.md  vcpkg.json
android/app/: build.gradle.kts
app/: CMakeLists.txt
app/caerwyn/: CMakeLists.txt  main.cpp  resize_hook.hpp  resize_hook_win32.cpp
src/gui/: AppWindow.ixx  AppWindow_platform.cpp  BoxLayout.ixx  CMakeLists.txt  ColumnLayout.ixx  Font.ixx  Gui.ixx  RichTextLabel.ixx  RowLayout.ixx  ScrollView.ixx  Scrollbar.ixx  Viewport.ixx  Widget.ixx  embed_binary.cmake
